apps/phobos/media-server/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: bazarr
  name: bazarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bazarr.home.arpa`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: bazarr-tls
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   labels:
#     app.kubernetes.io/instance: media-server
#     app.kubernetes.io/name: lidarr
#   name: lidarr
#   namespace: media
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - kind: Rule
#       match: Host(`lidarr.home.arpa`)
#       middlewares:
#         - name: ip-allowlist
#           namespace: traefik
#         - name: security-headers
#           namespace: traefik
#       services:
#         - name: lidarr
#           port: 8686
#   tls:
#     secretName: lidarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: muxarr
  name: muxarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`muxarr.home.arpa`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: muxarr
          port: 8183
  tls:
    secretName: muxarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: nzbget
  name: nzbget
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nzbget.home.arpa`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: nzbget
          port: 6789
  tls:
    secretName: nzbget-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: ombi
  name: ombi
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ombi.home.arpa`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: ombi
          port: 5000
  tls:
    secretName: ombi-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: prowlarr
  name: prowlarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.home.arpa`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: prowlarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.home.arpa`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.home.arpa`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-tls
